Fixed bug #29210 (Function: is_callable - no support for private and protected classes).